[tool.poetry]
name = "testmupdf"
version = "0.1.0"
description = ""
authors = ["vzhd1701 <vzhd1701@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.19.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
